# fog_gazebo_resources

./: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: gazebo.launch.py
models/grass_plane/meshes/: grass_plane.dae
models/ssrc_fog_x/: model.config  model.sdf
models/tree_simple/scripts/: tree_simple.material
scripts/: sitl_run.sh  spawn_drone.sh
worlds/: forest.world  grass_plane.world  small_forest.world
