<?xml version="1.0"?>
<package format="3">
  <name>fog_gazebo_resources</name>
  <version>1.0.0</version>
  <description>This package contains common gazebo files (worlds, models and plugins) for the fog UAV system.</description>

  <author email="spurny@fly4future.com">Vojtech Spurny</author>
  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
